<resources>
    <string name="app_name">Feather Sync</string>
    <string name="title_connect">Connect</string>
    <string name="title_status">Status</string>
    <string name="title_image">Image</string>
    <string name="ui_status_button_offline">Offline [0]</string>
    <string name="ui_status_button_unknown">Unknown [1]</string>
    <string name="ui_status_button_busy">Busy [2]</string>
    <string name="ui_status_button_dnd">DND [3]</string>
    <string name="ui_status_button_available">Available [4]</string>
</resources>