<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_status">

    <fragment
        android:id="@+id/navigation_status"
        android:name="me.emilycurry.feathersync.ui.status.StatusFragment"
        android:label="@string/title_status"
        tools:layout="@layout/fragment_status" />

    <fragment
        android:id="@+id/navigation_image"
        android:name="me.emilycurry.feathersync.ui.image.ImageFragment"
        android:label="@string/title_image"
        tools:layout="@layout/fragment_image" />

    <fragment
        android:id="@+id/navigation_connect"
        android:name="me.emilycurry.feathersync.ui.connect.ConnectFragment"
        android:label="@string/title_connect"
        tools:layout="@layout/fragment_connect" />
</navigation>